docs(#104): add Discovery section for sf new to SKILL.md
Document the Guided/Express/Expert modes that replace Inquirer, the intent
schema (pointing at new-flags.json as single source of truth), the
recommendation defaults, and the don'ts (no fabricated flags, no secret
echo-back, round-trip through plan-new.sh). Drop the now-delivered 2C
entry from Future capabilities.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>